# 42-Cursus

A-Maze-Ing/: Makefile  README.md  a_maze_ing.py  config.txt
A-Maze-Ing/controllers/: maze_controller.py
A-Maze-Ing/core/: config_parser.py  generator.py  maze.py  solver.py
A-Maze-Ing/display/: ascii_interactive.py  ascii_viewer.py  base_viewer.py
A-Maze-Ing/mazegen_forge/: README.md  __init__.py  _logger.py  generator.py  maze.py  pyproject.toml  solver.py
A-Maze-Ing/utils/: exporter.py  logger.py  observer.py
Call-Me-Maybe/: Makefile  README.md  mypy.ini  mypy_out.txt  pyproject.toml
Call-Me-Maybe/llm_sdk/llm_sdk/: __init__.py
Call-Me-Maybe/src/: __main__.py  models.py  processor.py
Codexion/: Makefile  README.md  codexion  explications.md
Codexion/coders/: init.c  main.c  main.h  monitor.c  routine.c  scheduler.c  struct.h  utils.c  verification.c
Fly-in/: Makefile  __main__.py  builder.py  drone.py  graph.py  parsing.py  simulation.py  solver.py  visualizer.py
Libft/: ft_calloc.c  ft_strlen.c  libft.h
PythonModule/Python0/: main.py
PythonModule/Python1/: python01tester.py
PythonModule/Python3/: ft_coordinate_system.py
PythonModule/Python6/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
PythonModule/Python8/ex1/: loading.py  pyproject.toml
a-maze-ing/: Makefile
a-maze-ing/src/: main.py
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_utils.c
push_swap/: Makefile
push_swap_duo/: Makefile  push_swap
tester/: push_swap_tester.py
(+120 files in other folders)
