[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Data analysis tool for the Matrix"
authors = ["Ton Nom <ton@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
requests = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"